<resources>
    <string name="app_name">Housing</string>
    <string name="login">Login</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrar">Registrar</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="contraseña_invalida">La contraseña debe tener un minimo de 6 carácteres.</string>
    <string name="contraseña_incorrecta">La contraseña es incorrecta.</string>
    <string name="email_incorrecto">El email es inoorrecto</string>
    <string name="usuario_existe">El usuario ya existe</string>
    <string name="email_vacio">Introduce email</string>
    <string name="nombre_vacio">Introduce tu nombre</string>
    <string name="apellidos_vacio">Introduce tus apellidos</string>
    <string name="salir">Salir</string>
    <string name="ajustes">Ajustes</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="email_invalido">El email introducido no es válido</string>
    <string name="email_cambiar">Cambiar email</string>
    <string name="nombre_cambiar">Cambiar nombre</string>
    <string name="contraseña_cambiar">Cambiar contraseña</string>
    <string name="contraseña_nueva">Contraseña nueva</string>
    <string name="contraseña_antigua">Contraseña antigua</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="añadir_oferta">Añadir oferta</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="data_inicio">Fecha inicio</string>
    <string name="data_fin">Fecha fin</string>
    <string name="direccion">Dirección</string>
    <string name="cp">Código postal</string>
    <string name="maximo_personas">Número máximo de personas</string>
    <string name="precio_dia">Precio/día</string>
    <string name="ver_ofertas">Ver ofertas</string>
    <string name="mis_ofertas">Mis ofertas</string>
    <string name="ofertas_aceptadas">Ofertas aceptadas</string>
    <string name="provincia">Provincia:</string>
    <string name="crear_oferta">Crear nueva oferta</string>
    <string name="campo_vacio">Debes rellenar el campo</string>
    <string name="no_negativo">Este campo no puede ser negativo</string>
    <string name="fecha_no_valida">La fecha no es válida</string>
    <string name="nueva_oferta">Nueva oferta</string>
    <string name="num_total_personas">Número personas:</string>
    <string name="fecha">Fecha:</string>
    <string name="buscar">Buscar</string>
    <string name="puntuacion">Puntuacion</string>
    <string name="todas_ofertas">Todas las ofertas</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="detalles">Detalles</string>
    <string name="descripcion_detalle">Descripcion:</string>
    <string name="data_inicio_detalle">Fecha inicio:</string>
    <string name="data_fin_detalle">Fecha fin:</string>
    <string name="direccion_detalle">Dirección:</string>
    <string name="cp_detalle">Código postal:</string>
    <string name="precio_dia_detalle">Precio/día:</string>
    <string name="maximo_personas_detalle">Número máximo de personas:</string>
    <string name="reservar">Reservar</string>
¡   <string name="reseñas">Reseñas:</string>
    <string name="reserva_realizada">Reserva realizada</string>
    <string name="sin_ofertas">Sin ofertas</string>
    <string name="nueva_oferta_detalle">Nueva oferta</string>
    <string name="eliminar_oferta">Eliminar oferta</string>
    <string name="conrifmar_eliminar_msg">¿Eliminar oferta?</string>
    <string name="oferta_creada">Nueva oferta creada</string>
    <string name="dia_existe">Ya hay una oferta en el mismo día</string>
    <string name="nueva_reseña">Nueva reseña</string>
    <string name="comentario_añadido">Comentario añadido</string>
    <string name="escribe_reseña">Escribe aqui tu reseña</string>
    <string name="disponible">DISPONIBLE</string>
    <string name="reservado">RESERVADO</string>
    <string name="finalizado">FINALIZADO</string>
    <string name="fuera_plazo">FUERA DE PLAZO</string>
    <string name="elegir_img">Selecciona imagen</string>
    <string name="subir_img">Subiendo imagen</string>
    <string name="buscar_casa">Buscar casa</string>
    <string name="mis_reservas">Mis reservas</string>

</resources>

