<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:hint="@string/nombre"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/apellidos"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/cambiar_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_cambiar"
        android:layout_gravity="center"/>

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cambiar_email"
        android:text="@string/email_cambiar"
        android:layout_gravity="center"/>

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contraseña_antigua"
        android:hint="@string/contraseña_antigua"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contraseña"
        android:hint="@string/contraseña_nueva"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cambiar_contraseña"
        android:text="@string/contraseña_cambiar"/>
</LinearLayout>