<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contraseña"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:hint="@string/nombre"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/apellidos"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/registrar"
        android:text="@string/registrar"
        android:drawableLeft="@drawable/baseline_person_add_white_24dp"
        android:drawablePadding="@dimen/draw_padding"/>
</LinearLayout>