<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1" />

            <EditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:inputType="textMultiLine|textCapSentences"
                android:gravity="top"
                android:hint="@string/descripcion"
                android:imeOptions="actionDone"
                android:maxHeight="160dp"
                android:scrollHorizontally="false"/>

            <EditText
                android:id="@+id/data_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/data_inicio"
                android:inputType="date"
                android:imeOptions="actionNext"
                android:maxLines="1" />

            <EditText
                android:id="@+id/data_fin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/data_fin"
                android:inputType="date"
                android:imeOptions="actionNext"
                android:maxLines="1" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/edit_prov"
                    android:text="@string/provincia" />

                <Spinner
                    android:id="@+id/provincia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/edit_prov"
                    android:layout_marginLeft="10sp"
                    android:entries="@array/array_provincias"
                    android:imeOptions="actionNext"
                    android:spinnerMode="dialog" />
            </RelativeLayout>


            <EditText
                android:id="@+id/cp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:hint="@string/cp" />

            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine|textCapSentences"
                android:gravity="top"
                android:maxHeight="100dp"
                android:hint="@string/direccion"
                android:imeOptions="actionNext"
                android:maxLines="3"
                android:scrollHorizontally="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maximo_personas" />

            <EditText
                android:id="@+id/maximo_personas"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:inputType="number"
                android:maxLength="2"
                android:imeOptions="actionNext"
                />

            <EditText
                android:id="@+id/precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_dia"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                />


            <Button
                android:id="@+id/btn_elegirIm"
                android:text="@string/elegir_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/baseline_add_photo_alternate_white_24dp"
                android:paddingLeft="@dimen/draw_padding"
                />


            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/max_imgview_height"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crear_oferta"
                android:layout_gravity="center_horizontal"
                android:text="@string/crear_oferta"
                android:drawableLeft="@drawable/baseline_add_circle_white_24dp"
                android:drawablePadding="@dimen/draw_padding"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>