<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <EditText
        android:id="@+id/reseña"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:inputType="textMultiLine|textCapSentences"
        android:hint="@string/escribe_reseña"
        android:gravity="top"
        android:scrollHorizontally="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntuacion"
        android:textSize="@dimen/text_mediano"/>

    <Spinner
        android:id="@+id/spinner_puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/puntuaciones"
        android:spinnerMode="dialog"
        />

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/baseline_done_white_24dp"
        android:drawablePadding="@dimen/draw_padding"/>
</LinearLayout>